<resources>
    <string name="app_name">Weather Forecast - Arwan</string>
    <string name="label_search_city">Search City</string>
    <string name="label_favorite_locations">Favorite Locations</string>
    <string name="label_back">Back</string>
    <string name="label_save">Save</string>
    <string name="label_delete">Delete</string>
    <string name="label_reload">Reload</string>
    <string name="label_time">Time</string>
    <string name="label_weather">Weather</string>
    <string name="label_temperature">Temp</string>
    <string name="label_humidity">Humidity</string>
    <string name="label_wind">Wind</string>
</resources>